BUG: remove unused code from ITKCudaCommon
This code was managing templated kernels. This is probably not the
simplest solution now that Cuda can better handle templates. This should
be refactored, this patch fixes #287 for the time being.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ project(ITKCudaCommon)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/CMake)
 
-include(itkCUDA)
+find_package(CUDA REQUIRED)
+if(NOT ${CUDA_FOUND})
+     message(FATAL "Could not find CUDA")
+endif()
 
 set(ITKCudaCommon_LIBRARIES ITKCudaCommon)
 set(ITKCudaCommon_SYSTEM_INCLUDE_DIRS ${CUDA_INCLUDE_DIRS})
