STYLE: rename to CudaCommon and sync with ITKModuleTemplate

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,13 @@
 # Require a CMake version providing FindCUDAToolkit
 cmake_minimum_required(VERSION 3.17 FATAL_ERROR)
-
-project(ITKCudaCommon)
+project(CudaCommon)
 
 if(NOT ITK_SOURCE_DIR)
   include(itk-module-init.cmake)
 endif()
 
-set(ITKCudaCommon_LIBRARIES ITKCudaCommon)
-set(ITKCudaCommon_INCLUDE_DIRS ${ITKCudaCommon_SOURCE_DIR}/include)
+set(CudaCommon_LIBRARIES CudaCommon)
+set(CudaCommon_INCLUDE_DIRS ${CudaCommon_SOURCE_DIR}/include)
 
 # --------------------------------------------------------
 # Find ITK (required)
@@ -24,5 +23,6 @@ if(NOT ITK_SOURCE_DIR)
   list(APPEND CMAKE_MODULE_PATH ${ITK_CMAKE_DIR})
   include(ITKModuleExternal)
 else()
+  set(ITK_DIR ${CMAKE_BINARY_DIR})
   itk_module_impl()
 endif()
