--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,15 @@
-set(ITKCudaCommon_SRCS
+set(CudaCommon_SRCS
   itkCudaContextManager.cxx
   itkCudaDataManager.cxx
   itkCudaUtil.cxx
   itkCudaMemoryProbe.cxx
   )
 
-set(ITKCudaCommon_Kernels
+set(CudaCommon_Kernels
   itkCudaSquareImage.cu
   )
 
-itk_module_add_library(ITKCudaCommon ${ITKCudaCommon_SRCS} ${ITKCudaCommon_Kernels})
-target_link_libraries(ITKCudaCommon LINK_PUBLIC CUDA::cudart CUDA::cuda_driver)
-target_include_directories(ITKCudaCommon PUBLIC ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
-set_property(TARGET ITKCudaCommon PROPERTY CUDA_STANDARD ${CMAKE_CXX_STANDARD})
+itk_module_add_library(CudaCommon ${CudaCommon_SRCS} ${CudaCommon_Kernels})
+target_link_libraries(CudaCommon LINK_PUBLIC CUDA::cudart CUDA::cuda_driver)
+target_include_directories(CudaCommon PUBLIC ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+set_property(TARGET CudaCommon PROPERTY CUDA_STANDARD ${CMAKE_CXX_STANDARD})
