--- a/.github/workflows/build-test-package-python-cuda.yml
+++ b/.github/workflows/build-test-package-python-cuda.yml
@@ -4,7 +4,7 @@ on: [push,pull_request]
 
 env:
   cmake-options: '-DCUDACOMMON_CUDA_VERSION=11.6'
-  itk-wheel-tag: 'v5.4rc01'
+  itk-wheel-tag: 'v5.4rc02'
   itk-python-package-tag: '5ad02309321621cdc7269b9b68a35013c912271c'
   itk-python-package-org: 'InsightSoftwareConsortium'
 
@@ -14,7 +14,7 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        python3-minor-versions: ["7", "8", "9", "10", "11"]
+        python3-minor-version: ["8", "9", "10", "11"]
         manylinux-platform: ["_2_28-x64","2014-x64"]
 
     steps:
@@ -41,6 +41,7 @@ jobs:
         if test -e ../../ITKPythonBuilds-linux-manylinux2014.tar.zst ; then
            mv ../../*zst .
         fi
+
         MANYLINUX_PLATFORM=${{ matrix.manylinux-platform }}
         echo "Manylinux platform ${MANYLINUX_PLATFORM}"
         rm -rf ITKPythonPackage
@@ -49,7 +50,7 @@ jobs:
         export ITK_MODULE_NO_CLEANUP=TRUE
         echo "Building for manylinux specialization ${MANYLINUX_VERSION} and target architecture ${TARGET_ARCH}"
 
-        ./dockcross-manylinux-download-cache-and-build-module-wheels.sh "${CMAKE_OPTIONS[@]}" -x "libcuda.so;libcuda.so.1;libcudart.so;libcudart.so.11.0;libcublas.so;libcublas.so.11;libcublasLt.so;libcublasLt.so.11;libcufft.so;libcufft.so.10" cp3${{ matrix.python3-minor-versions }}
+        ./dockcross-manylinux-download-cache-and-build-module-wheels.sh "${CMAKE_OPTIONS[@]}" -x "libcuda.so;libcuda.so.1;libcudart.so;libcudart.so.11.0;libcublas.so;libcublas.so.11;libcublasLt.so;libcublasLt.so.11;libcufft.so;libcufft.so.10" cp3${{ matrix.python3-minor-version }}
         mv *zst ../..
 
     - name: Validate build output
@@ -72,7 +73,7 @@ jobs:
     - name: Publish Python package as GitHub Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: LinuxWheel3${{ matrix.python3-minor-versions }}-cuda116
+        name: LinuxWheel3${{ matrix.python3-minor-version }}-cuda116
         path: dist/*.whl
 
   build-windows-cuda-python-packages:
@@ -80,7 +81,7 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        python3-minor-version: ["7", "8", "9", "10", "11"]
+        python3-minor-version: ["8", "9", "10", "11"]
 
     steps:
     - uses: actions/checkout@v3
