--- a/.github/workflows/build-test-package-python-cuda.yml
+++ b/.github/workflows/build-test-package-python-cuda.yml
@@ -5,7 +5,7 @@ on: [push,pull_request]
 env:
   cmake-options: '-DCUDACOMMON_CUDA_VERSION=11.6'
   itk-wheel-tag: 'v5.4rc02'
-  itk-python-package-tag: '5ad02309321621cdc7269b9b68a35013c912271c'
+  itk-python-package-tag: '8b047b05ee19c01a1744af2b3ee36f7c893ee01e'
   itk-python-package-org: 'InsightSoftwareConsortium'
 
 jobs:
@@ -31,13 +31,17 @@ jobs:
       shell: bash
       run: |
         rm -rf dist
-
         export ITK_PACKAGE_VERSION=${{ env.itk-wheel-tag }}
         export ITKPYTHONPACKAGE_TAG=${{ env.itk-python-package-tag }}
         export ITKPYTHONPACKAGE_ORG=${{ env.itk-python-package-org }}
         export ITK_MODULE_PREQ=${{ env.itk-module-deps }}
         CMAKE_OPTIONS=(--cmake_options "${{ env.cmake-options }} -DCUDAToolkit_ROOT=/usr/lib64/cuda116 -DCMAKE_CUDA_COMPILER=/usr/lib64/cuda116/bin/nvcc")
-        export LD_LIBRARY_PATH="/home/srit/Downloads/cuda116:/home/srit/Downloads/cuda116/targets/x86_64-linux/lib:/home/srit/Downloads/cuda116/lib64/stubs"
+
+        # The first two are not library paths but are included to be mounted in the
+        # docker by dockcross-manylinux-build-module-wheels.sh
+        export LD_LIBRARY_PATH="/home/srit/Downloads/cuda116"
+        export LD_LIBRARY_PATH="/usr/lib64/libcuda.so.1:$LD_LIBRARY_PATH"
+        export LD_LIBRARY_PATH="/home/srit/Downloads/cuda116/targets/x86_64-linux/lib::$LD_LIBRARY_PATH"
         if test -e ../../ITKPythonBuilds-linux-manylinux2014.tar.zst ; then
            mv ../../*zst .
         fi
@@ -53,7 +57,7 @@ jobs:
         export ITK_MODULE_NO_CLEANUP=TRUE
         echo "Building for manylinux specialization ${MANYLINUX_VERSION} and target architecture ${TARGET_ARCH}"
 
-        ./dockcross-manylinux-download-cache-and-build-module-wheels.sh "${CMAKE_OPTIONS[@]}" -x "libcuda.so;libcuda.so.1;libcudart.so;libcudart.so.11.0;libcublas.so;libcublas.so.11;libcublasLt.so;libcublasLt.so.11;libcufft.so;libcufft.so.10" cp3${{ matrix.python3-minor-version }}
+        ./dockcross-manylinux-download-cache-and-build-module-wheels.sh "${CMAKE_OPTIONS[@]}" -x "libcuda.so.1;libcudart.so.11.0" cp3${{ matrix.python3-minor-version }}
         mv *zst ../..
 
     - name: Validate build output
