--- a/.github/workflows/build-test-package-python-cuda.yml
+++ b/.github/workflows/build-test-package-python-cuda.yml
@@ -3,8 +3,8 @@ name: 'Package ITKCudaCommon with CUDA'
 on: [push,pull_request]
 
 env:
-  itk-wheel-tag: 'v5.4rc02'
-  itk-python-package-tag: '8b047b05ee19c01a1744af2b3ee36f7c893ee01e'
+  itk-wheel-tag: 'v5.4.0'
+  itk-python-package-tag: 'v5.4.0'
   itk-python-package-org: 'InsightSoftwareConsortium'
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        python3-minor-version: ["8", "9", "10", "11"]
+        python3-minor-version: ["8","9","10","11"]
         manylinux-platform: ["_2_28-x64","2014-x64"]
         cuda-version: ["116","121"]
 
@@ -41,7 +41,6 @@ jobs:
         CMAKE_OPTIONS="-DCUDACOMMON_CUDA_VERSION=${CUDA_VERSION_MAJOR}.${CUDA_VERSION_MINOR}"
         CMAKE_OPTIONS="${CMAKE_OPTIONS} -DCUDAToolkit_ROOT=/usr/lib64/cuda${CUDA_VERSION}"
         CMAKE_OPTIONS="${CMAKE_OPTIONS} -DCMAKE_CUDA_COMPILER=/usr/lib64/cuda${CUDA_VERSION}/bin/nvcc"
-        CMAKE_OPTIONS=(--cmake_options "${CMAKE_OPTIONS}")
 
         # The first two are not library paths but are included to be mounted in the
         # docker by dockcross-manylinux-build-module-wheels.sh
@@ -53,9 +52,11 @@ jobs:
         fi
 
         MANYLINUX_PLATFORM=${{ matrix.manylinux-platform }}
-        if [[ ${MANYLINUX_PLATFORM} == "_2_28-x64" ]]; then
+        if test ${MANYLINUX_PLATFORM} == "_2_28-x64" && test ${CUDA_VERSION} -lt 120; then
           export IMAGE_TAG=20230106-1aeaea0
+          CMAKE_OPTIONS="${CMAKE_OPTIONS} -DITK_USE_PYTHON_LIMITED_API=FALSE"
         fi
+        CMAKE_OPTIONS=(--cmake_options "${CMAKE_OPTIONS}")
         echo "Manylinux platform ${MANYLINUX_PLATFORM}"
         rm -rf ITKPythonPackage
         export MANYLINUX_VERSION=`(echo ${MANYLINUX_PLATFORM} | cut -d '-' -f 1)`
@@ -98,7 +99,7 @@ jobs:
         cuda-version: ["116","121"]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         path: "im"
 
@@ -160,7 +161,7 @@ jobs:
         python -m twine check ${WHEEL_PATTERN}
 
     - name: Publish Python package as GitHub Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: WindowsWheel3${{ matrix.python3-minor-version }}-cuda${{ matrix.cuda-version }}
         path: dist/*.whl
@@ -173,7 +174,7 @@ jobs:
 
     steps:
     - name: Download Python Packages
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
 
     - name: Prepare packages for upload
       run: |
