--- a/.github/workflows/build-test-package-python-cuda.yml
+++ b/.github/workflows/build-test-package-python-cuda.yml
@@ -4,8 +4,8 @@ on: [push,pull_request]
 
 env:
   cmake-options: '-DCUDACOMMON_CUDA_VERSION=11.6'
-  itk-wheel-tag: 'v5.4rc02'
-  itk-python-package-tag: '8b047b05ee19c01a1744af2b3ee36f7c893ee01e'
+  itk-wheel-tag: 'v5.4rc03'
+  itk-python-package-tag: 'c208ebbc852d60fbdfa3901be79987ff63fe8aba'
   itk-python-package-org: 'InsightSoftwareConsortium'
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        python3-minor-version: ["8", "9", "10", "11"]
+        python3-minor-version: ["8","9","10","11"]
         manylinux-platform: ["_2_28-x64","2014-x64"]
 
     steps:
@@ -78,9 +78,9 @@ jobs:
         /home/srit/miniconda3/envs/py310/bin/python -m twine check ${WHEEL_PATTERN}
 
     - name: Publish Python package as GitHub Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: LinuxWheel3${{ matrix.python3-minor-version }}-cuda116
+        name: LinuxWheel3${{ matrix.python3-minor-version }}${{ matrix.manylinux-platform }}-cuda116
         path: dist/*.whl
 
   build-windows-cuda-python-packages:
@@ -88,7 +88,7 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        python3-minor-version: ["8", "9", "10", "11"]
+        python3-minor-version: ["8","9","10","11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -147,7 +147,7 @@ jobs:
         python -m twine check ${WHEEL_PATTERN}
 
     - name: Publish Python package as GitHub Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: WindowsWheel3${{ matrix.python3-minor-version }}-cuda116
         path: dist/*.whl
@@ -160,7 +160,7 @@ jobs:
 
     steps:
     - name: Download Python Packages
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
 
     - name: Prepare packages for upload
       run: |
