--- a/.github/workflows/build-test-package-python-cuda.yml
+++ b/.github/workflows/build-test-package-python-cuda.yml
@@ -14,7 +14,7 @@ jobs:
       max-parallel: 2
       matrix:
         python3-minor-version: ["8","9","10","11"]
-        manylinux-platform: ["_2_28-x64","2014-x64"]
+        manylinux-platform: ["_2_28-aarch64"]
         cuda-version: ["116","121"]
 
     steps:
@@ -55,6 +55,8 @@ jobs:
         if test ${MANYLINUX_PLATFORM} == "_2_28-x64" && test ${CUDA_VERSION} -lt 120; then
           export IMAGE_TAG=20230106-1aeaea0
           CMAKE_OPTIONS="${CMAKE_OPTIONS} -DITK_USE_PYTHON_LIMITED_API=FALSE"
+        elif test ${MANYLINUX_PLATFORM} == "_2_28-aarch64"; then
+          export NO_SUDO=true
         fi
         CMAKE_OPTIONS=(--cmake_options "${CMAKE_OPTIONS}")
         echo "Manylinux platform ${MANYLINUX_PLATFORM}"
@@ -90,86 +92,9 @@ jobs:
         name: LinuxWheel3${{ matrix.python3-minor-version }}${{ matrix.manylinux-platform }}-cuda${{ matrix.cuda-version }}
         path: dist/*.whl
 
-  build-windows-cuda-python-packages:
-    runs-on: self-hosted-windows
-    strategy:
-      max-parallel: 2
-      matrix:
-        python3-minor-version: ["8","9","10","11"]
-        cuda-version: ["116","121"]
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        path: "im"
-
-    - name: 'Reduce source path length'
-      shell: bash
-      run: |
-        # Move ITKPythonBuilds archive to the checked-out source
-        if test -f ../../im/ITKPythonBuilds-windows.zip; then
-           mv ../../im/*.zip im
-        fi
-        rm -fr ../../im
-
-        # Move checked-out source to a shorter path to avoid Windows path length issues
-        mv im ../../
-
-    - name: 'Fetch build script'
-      shell: pwsh
-      run: |
-        cd ../../im
-        $ITKPYTHONPACKAGE_TAG = "${{ env.itk-python-package-tag }}"
-        $ITKPYTHONPACKAGE_ORG = "${{ env.itk-python-package-org }}"
-        $SCRIPT_UPSTREAM = "https://raw.githubusercontent.com/$ITKPYTHONPACKAGE_ORG/ITKPythonPackage/$ITKPYTHONPACKAGE_TAG/scripts/windows-download-cache-and-build-module-wheels.ps1"
-        echo "Fetching $SCRIPT_UPSTREAM"
-        (new-object net.webclient).DownloadString($SCRIPT_UPSTREAM) > windows-download-cache-and-build-module-wheels.ps1
-
-    - name: 'Build 🐍 Python 📦 package'
-      shell: pwsh
-      run: |
-        if (Test-Path dist) { rm dist -r -fo }
-
-        cd ../../im
-        & "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\Tools\Launch-VsDevShell.ps1" -Arch amd64 -SkipAutomaticLocation
-        $env:CC="cl.exe"
-        $env:CXX="cl.exe"
-        $env:ITK_PACKAGE_VERSION = "${{ env.itk-wheel-tag }}"
-        $env:ITKPYTHONPACKAGE_TAG = "${{ env.itk-python-package-tag }}"
-        $env:ITKPYTHONPACKAGE_ORG = "${{ env.itk-python-package-org }}"
-        $env:ITK_MODULE_PREQ = "${{ env.itk-module-deps }}"
-        $CUDA_VERSION = "${{ matrix.cuda-version }}"
-        $CUDA_VERSION_MAJOR=$CUDA_VERSION.substring(0,2)
-        $CUDA_VERSION_MINOR=$CUDA_VERSION.substring(2,$CUDA_VERSION.Length-2)
-        $env:CUDA_PATH = "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v${CUDA_VERSION_MAJOR}.${CUDA_VERSION_MINOR}"
-        $env:Path = "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v${CUDA_VERSION_MAJOR}.${CUDA_VERSION_MINOR}\bin;" + $env:Path
-        $LIBCUDART= (Get-Item "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v${CUDA_VERSION_MAJOR}.${CUDA_VERSION_MINOR}\bin\cudart64*dll" ).Name
-        ./windows-download-cache-and-build-module-wheels.ps1 "${{ matrix.python3-minor-version }}" -setup_options "--lib-paths ""C:/Program\ Files/NVIDIA\ GPU\ Computing\ Toolkit/CUDA/v${CUDA_VERSION_MAJOR}.${CUDA_VERSION_MINOR}/bin"" --exclude-libs ""nvcuda.dll;${LIBCUDART}""" -cmake_options "${{ env.cmake-options }}"
-
-        mkdir -p '${{ github.workspace }}\dist'
-        cp 'dist\*.whl' '${{ github.workspace }}\dist'
-
-    - name: Validate build output
-      shell: pwsh
-      run: |
-        python -m pip install twine
-        ls dist/
-
-        $WHEEL_PATTERN = "dist/itk_*cp3${{ matrix.python3-minor-version }}*win*.whl"
-        echo "Searching for wheels matching pattern ${WHEEL_PATTERN}"
-
-        python -m twine check ${WHEEL_PATTERN}
-
-    - name: Publish Python package as GitHub Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: WindowsWheel3${{ matrix.python3-minor-version }}-cuda${{ matrix.cuda-version }}
-        path: dist/*.whl
-
   publish-python-packages-to-pypi:
     needs:
       - build-linux-cuda-python-packages
-      - build-windows-cuda-python-packages
     runs-on: ubuntu-22.04
 
     steps:
