--- a/.github/workflows/build-test-cxx-cuda.yml
+++ b/.github/workflows/build-test-cxx-cuda.yml
@@ -5,6 +5,10 @@ on: [push,pull_request]
 env:
   itk-git-tag: "v5.4.0"
 
+concurrency:
+  group: '${{ github.workflow }}@${{ github.head_ref || github.run_id }}'
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
+
 jobs:
   build-test-cxx:
     runs-on: ${{ matrix.os }}
