--- a/.github/workflows/build-test-package-python-cuda.yml
+++ b/.github/workflows/build-test-package-python-cuda.yml
@@ -7,6 +7,10 @@ env:
   itk-python-package-tag: 'f38e8b0f38580807809b0412235fb2ba0946deba'
   itk-python-package-org: 'InsightSoftwareConsortium'
 
+concurrency:
+  group: '${{ github.workflow }}@${{ github.head_ref || github.run_id }}'
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
+
 jobs:
   build-linux-cuda-python-packages:
     runs-on: self-hosted-linux
