--- a/.github/workflows/build-test-package-python-cuda.yml
+++ b/.github/workflows/build-test-package-python-cuda.yml
@@ -4,7 +4,8 @@ on: [push,pull_request]
 
 env:
   itk-wheel-tag: 'v5.4.2.post1'
-  itk-python-package-tag: 'v5.4.2.post1'
+  # v5.4.2.post1 + linux libtbb fix
+  itk-python-package-tag: '9534d2d6ad5e741825d9708e68bda76464fab08b'
   itk-python-package-org: 'InsightSoftwareConsortium'
 
 concurrency:
