--- a/.github/workflows/build-test-package-python-cuda.yml
+++ b/.github/workflows/build-test-package-python-cuda.yml
@@ -3,9 +3,8 @@ name: 'Package ITKCudaCommon with CUDA'
 on: [push,pull_request]
 
 env:
-  itk-wheel-tag: 'v5.4.2.post1'
-  # v5.4.2.post1 + linux libtbb fix
-  itk-python-package-tag: '9534d2d6ad5e741825d9708e68bda76464fab08b'
+  itk-wheel-tag: 'v5.4.3'
+  itk-python-package-tag: 'v5.4.3'
   itk-python-package-org: 'InsightSoftwareConsortium'
 
 concurrency:
