--- a/wrapping/CMakeLists.txt
+++ b/wrapping/CMakeLists.txt
@@ -4,5 +4,6 @@ itk_end_wrap_module()
 
 wrap_itk_python_bindings_install(/itk "CudaCommon"
   __init_cudacommon__.py
+  ${CudaCommon_SOURCE_DIR}/wrapping/itkCudaImageFromCudaArray.py
   ${CudaCommon_SOURCE_DIR}/wrapping/itkCudaImageFromImage.py)
 
