--- a/.github/workflows/build-test-package-python-cuda.yml
+++ b/.github/workflows/build-test-package-python-cuda.yml
@@ -202,3 +202,32 @@ jobs:
         skip_existing: true
         user: __token__
         password: ${{ secrets.pypi_password }}
+
+  test-python-wheel:
+    needs:
+      - build-linux-cuda-python-packages
+    runs-on: self-hosted-linux
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Download all wheel artifacts
+      uses: actions/download-artifact@v4
+      with:
+        path: wheels
+      
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+        
+    - name: Test python wheel
+      run: |
+        # Find the CUDA 124 wheel for Python 3.11 dynamically
+        wheel=$(find wheels -name "*cuda124*cp311*manylinux_2_28_x86_64.whl" -type f | head -1)
+
+        echo "Installing wheel: $wheel"
+        pip install $wheel --force-reinstall
+
+        pip install pytest
+        pytest $GITHUB_WORKSPACE/test/*.py
