--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,24 @@
-set(CudaCommon_SRCS
+set(
+  CudaCommon_SRCS
   itkCudaDataManager.cxx
   itkCudaUtil.cxx
   itkCudaMemoryProbe.cxx
-  )
+)
 
-set(CudaCommon_Kernels
-  itkCudaSquareImage.cu
-  )
+set(CudaCommon_Kernels itkCudaSquareImage.cu)
 
 itk_module_add_library(CudaCommon ${CudaCommon_SRCS} ${CudaCommon_Kernels})
-target_link_libraries(CudaCommon PUBLIC CUDA::cudart CUDA::cuda_driver)
+target_link_libraries(
+  CudaCommon
+  PUBLIC
+    CUDA::cudart
+    CUDA::cuda_driver
+)
 target_include_directories(CudaCommon PUBLIC ${CUDAToolkit_INCLUDE_DIRS})
-set_property(TARGET CudaCommon PROPERTY CUDA_STANDARD ${CMAKE_CXX_STANDARD})
+set_property(
+  TARGET
+    CudaCommon
+  PROPERTY
+    CUDA_STANDARD
+      ${CMAKE_CXX_STANDARD}
+)
