ENH: Add CudaSquareImageFilter types and wrap it

--- a/wrapping/CMakeLists.txt
+++ b/wrapping/CMakeLists.txt
@@ -1,4 +1,19 @@
 itk_wrap_module(CudaCommon)
+
+set(
+  WRAPPER_SUBMODULE_ORDER
+  itkCudaDataManager
+  itkCudaImage
+  itkCudaImageDataManager
+  itkCudaImageFromImageFilter
+  itkCudaImageToImageFilter
+  itkCudaInPlaceImageFilter
+  itkCudaSquareImageFilter
+  itkImageSourceCudaCommon
+  itkImageToImageFilterCudaCommon
+  itkInPlaceImageFilterCudaCommon
+)
+
 itk_auto_load_submodules()
 itk_end_wrap_module()
 
